Fix dark mode

--- a/src/app/styles/settings.css
+++ b/src/app/styles/settings.css
@@ -44,24 +44,22 @@
   --zindex-nav: 100;
 }
 
-/* Semantic Tokens */
-:root {
-  --color-text: var(--gray-900);
-  --color-text-light: var(--gray-600);
-  --color-text-contrast: var(--color-white);
-  --color-bg: var(--gray-100);
-  --color-bg-darker: var(--gray-200);
-  --color-surface-bg: var(--color-white);
-  --color-border: var(--gray-300);
-  --color-shadow: var(--gray-500);
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-text: var(--gray-900);
+    --color-text-light: var(--gray-600);
+    --color-text-contrast: var(--color-white);
+    --color-bg: var(--gray-100);
+    --color-bg-darker: var(--gray-200);
+    --color-surface-bg: var(--color-white);
+    --color-border: var(--gray-300);
+    --color-shadow: var(--gray-500);
+    --shadow-100: 0 0 1px var(--gray-500);
+  }
+}
 
-  --border-width: 1px;
-  --border: var(--border-width) solid var(--color-border);
-  --shadow: 0 0 15px color-mix(in srgb, var(--color-shadow) 70%, transparent);
-  --shadow-100: 0 3px 5px
-    color-mix(in srgb, var(--color-shadow) 20%, transparent);
-
-  @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
+  :root {
     --color-text: var(--gray-100);
     --color-text-light: var(--gray-500);
     --color-text-contrast: var(--color-white);
@@ -72,4 +70,13 @@
     --color-shadow: var(--gray-1000);
     --shadow-100: 0 0 1px var(--gray-500);
   }
+}
+
+/* Semantic Tokens */
+:root {
+  --border-width: 1px;
+  --border: var(--border-width) solid var(--color-border);
+  --shadow: 0 0 15px color-mix(in srgb, var(--color-shadow) 70%, transparent);
+  --shadow-100: 0 3px 5px
+    color-mix(in srgb, var(--color-shadow) 20%, transparent);
 }
